# ha-unifi-insights

./: .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  api_test_results.json  coverage.xml  hacs.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  unifi-network-api.md  unifi-protect-api.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/instructions/: aikido_rules.instructions.md  api.instructions.md  config_flow.instructions.md  configuration_yaml.instructions.md  coordinator.instructions.md  diagnostics.instructions.md  entities.instructions.md  json.instructions.md  manifest.instructions.md  markdown.instructions.md  python.instructions.md  repairs.instructions.md  service_actions.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md  yaml.instructions.md
.github/prompts/: Add Action.prompt.md  Add Config Option.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Add New Sensor.prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Update Translations.prompt.md
.github/workflows/: ci.yml  codecov.yml  copilot-setup-steps.yml  hacs.yml  hassfest.yml  release.yml  stale.yml
.serena/: project.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh
.specify/templates/: checklist-template.md  plan-template.md  tasks-template.md
config/: configuration.yaml
custom_components/unifi_insights/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  data_transforms.py  device_tracker.py  diagnostics.py  entity.py  event.py  icons.json  image.py  light.py  manifest.json  number.py  quality_scale.yaml  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  unifi_network_api.py  unifi_protect_api.py  update.py
custom_components/unifi_insights/api/: __init__.py  _version.py  auth.py  base.py  const.py  exceptions.py
custom_components/unifi_insights/api/network/: client.py
custom_components/unifi_insights/api/network/endpoints/: __init__.py  acl.py  clients.py  devices.py  dns.py  firewall.py  networks.py  resources.py  sites.py  traffic.py  vouchers.py  wifi.py
custom_components/unifi_insights/api/network/models/: acl.py  application.py  client.py  device.py  dns.py  firewall.py  resources.py  voucher.py  wifi.py
custom_components/unifi_insights/api/protect/: client.py  websocket.py
custom_components/unifi_insights/api/protect/endpoints/: application.py  cameras.py  chimes.py  events.py  lights.py  liveviews.py  nvr.py  sensors.py  viewers.py
custom_components/unifi_insights/api/protect/models/: camera.py  event.py  files.py  light.py  nvr.py  viewer.py
custom_components/unifi_insights/coordinators/: base.py  config.py  device.py  facade.py  protect.py
custom_components/unifi_insights/translations/: en.json
script/: develop  hassfest  lint  lint-check  query-api  spell  spell-check  test  test-firmware
script/setup/: bootstrap
scripts/: hacs_preflight.py  test_api.py
specs/001-migrate-unifi-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-migrate-unifi-api/checklists/: requirements.md
specs/001-migrate-unifi-api/contracts/: library-api.md
tests/: __init__.py  conftest.py  test_api_client_model.py  test_binary_sensor.py  test_button.py  test_camera.py  test_client_actions.py  test_config_flow.py  test_coordinator.py  test_coordinators.py  test_data_transforms.py  test_device_tracker.py  test_diagnostics.py  test_entity.py  test_event.py  test_image.py  test_init.py  test_light.py  test_number.py  test_repairs.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_update.py  test_vendored_api.py  test_wifi_qr_and_offline.py
tests/fixtures/: library_responses.py
