[project]
name = "ha-unifi-insights"
version = "2026.2.0"
description = "UniFi Insights Home Assistant Integration"
readme = "README.md"
requires-python = ">=3.14.2"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.317",
    "PyTurboJPEG>=2.2.0",
    "av>=16.1.0",
    "ha-ffmpeg>=3.2.2",
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "codespell>=2.4.1",
    "bandit[toml]>=1.7.5",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_components.unifi_insights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=custom_components.unifi_insights",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "-v",
    "-ra",
]

[tool.coverage.run]
source = ["custom_components/unifi_insights"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "custom_components/unifi_insights/coordinator.py",
    "custom_components/unifi_insights/data_transforms.py",
    "custom_components/unifi_insights/api/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py314"
line-length = 88
force-exclude = true
extend-exclude = [
    "custom_components/unifi_insights/api",
    "custom_components/unifi_insights/api/**",
    ".local",
    ".local/**",
    ".venv",
    ".venv/**",
    "venv",
    "venv/**",
    "build",
    "build/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E731",  # do not assign a lambda expression, use a def
    "PLR0913",  # too many arguments (HA coordinators need many params)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",      # Allow unused arguments in tests (fixtures)
    "S101",     # Allow asserts in tests
    "ANN",      # Allow missing annotations in tests
    "PLR0913",  # Allow many function arguments (fixtures)
    "PLR0915",  # Allow many statements in setup helpers
    "PLR2004",  # Allow magic values in tests
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.unifi_insights"]
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "silent"
exclude = "(^tests/|^custom_components/unifi_insights/api/)"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert and shell injection checks
